--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "bling-pipedrive",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "ts-node-dev --transpile-only --inspect --ignore-watch node_modules --respawn src/server.ts"
-  },
-  "dependencies": {
-    "axios": "^0.21.0",
-    "express": "^4.17.1",
-    "js2xmlparser": "^4.0.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.9",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
-  }
+   "name": "bling-pipedrive",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "scripts": {
+      "start": "ts-node-dev --transpile-only --inspect --ignore-watch node_modules --respawn src/server.ts"
+   },
+   "dependencies": {
+      "@types/node": "^14.14.10",
+      "axios": "^0.21.0",
+      "express": "^4.17.1",
+      "js2xmlparser": "^4.0.1",
+      "mongodb": "^3.6.3",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.28",
+      "mysql": "^2.14.1"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.9",
+      "ts-node-dev": "^1.0.0",
+      "typescript": "3.3.3333",
+      "ts-node": "3.3.0",
+      "@types/node": "^8.0.29"
+   }
 }
