--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
    "dependencies": {
       "@types/node": "^14.14.10",
       "axios": "^0.21.0",
+      "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "js2xmlparser": "^4.0.1",
       "mongodb": "^3.6.3",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.28",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.28"
    },
    "devDependencies": {
       "@types/express": "^4.17.9",
-      "ts-node-dev": "^1.0.0",
-      "typescript": "3.3.3333",
+      "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
-      "@types/node": "^8.0.29"
+      "ts-node-dev": "^1.0.0",
+      "typescript": "3.3.3333"
    }
 }
