--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "js2xmlparser": "^4.0.1",
+      "moment": "^2.29.1",
       "mongodb": "^3.6.3",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
